# vallog

./: LICENSE  README.md  pyproject.toml  setup.py  vallog.py
.github/: release.yaml
.github/workflows/: publish.yml  pylint.yml  python-publish.yml
tests/: example.py  example_logger.py  example_timer.py
vallog/: Logger.py  __init__.py  logger.py  timer.py
