[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vallog"
version = "0.2.0"
description = "Customizable Logging"
readme = "README.md"
readme-content-type = "text/markdown"
authors = [
    { name = "Valentin Reichenspurner", email = "v.reichenspurner@tum.de" }
]
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
packages = ["vallog"]

[tool.setuptools.package-data]
vallog = ["*"]

[tool.setuptools.scripts]
